Deleted unnecessary pictures, uploaded new profile img. Mobile Card - done all except social icons

--- a/index.html
+++ b/index.html
@@ -15,18 +15,28 @@
         <div><img src="images/FS1.png" alt="img name"></div>
         <div><img src="images/FS2.png" alt="img name"></div>
         <div><img src="images/FS3.png" alt="img name"></div>
-        <div><img src="images/FS4.png" alt="img name"></div>
         <div><img src="images/FS5.png" alt="img name"></div>
-        <div><img src="images/FS6.png" alt="img name"></div>
-        <div><img src="images/FS7.png" alt="img name"></div>
         <div><img src="images/FS8.png" alt="img name"></div>
         <div><img src="images/FS9.png" alt="img name"></div>
         <div><img src="images/FS10.png" alt="img name"></div>
         <div><img src="images/FS11.png" alt="img name"></div>
-        <div><img src="images/FS12.png" alt="img name"></div>
         <div><img src="images/FS13.png" alt="img name"></div>
-        <div><img src="images/FS14.png" alt="img name"></div>
-        <div><img src="images/FS15.png" alt="img name"></div>
+    </div>
+    <div class="container">
+        <div class="profile-cards">
+            <div class="card">
+                <div class="card-img">
+                    <img src="images/Ash.png" alt="Ash image">
+                    <div class="hover-box">
+
+                    </div>
+                </div>
+                <div class="card-title">
+                    <h2>Dr. Ashleigh Reid</h2>
+                    <p>An Engineer</p>
+                </div>
+            </div>
+        </div>
     </div>
 </div>
 <script src="https://code.jquery.com/jquery-3.7.1.min.js"
