--- a/index.html
+++ b/index.html
@@ -28,7 +28,11 @@
                 <div class="card-img">
                     <img src="images/Ash.png" alt="Ash image">
                     <div class="hover-box">
-
+                        <ul class="social-networks">
+                            <li><a href="#"><i class="icon-facebook"></i></a></li>
+                            <li><a href="#"><i class="icon-linkedin"></i></a></li>
+                            <li><a href="#"><i class="icon-twitter"></i></a></li>
+                        </ul>
                     </div>
                 </div>
                 <div class="card-title">
