2nd part is done.

--- a/index.html
+++ b/index.html
@@ -37,7 +37,103 @@
                 </div>
                 <div class="card-title">
                     <h2>Dr. Ashleigh Reid</h2>
-                    <p>An Engineer</p>
+                    <p>DevOps Engineer</p>
+                </div>
+            </div>
+            <div class="card">
+                <div class="card-img">
+                    <img src="images/Conduit.png" alt="Conduit image">
+                    <div class="hover-box">
+                        <ul class="social-networks">
+                            <li><a href="#"><i class="icon-facebook"></i></a></li>
+                            <li><a href="#"><i class="icon-linkedin"></i></a></li>
+                            <li><a href="#"><i class="icon-twitter"></i></a></li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="card-title">
+                    <h2>Rowenna Valentina</h2>
+                    <p>SEO and Founder</p>
+                </div>
+            </div>
+            <div class="card">
+                <div class="card-img">
+                    <img src="images/Hora.png" alt="Hora image">
+                    <div class="hover-box">
+                        <ul class="social-networks">
+                            <li><a href="#"><i class="icon-facebook"></i></a></li>
+                            <li><a href="#"><i class="icon-linkedin"></i></a></li>
+                            <li><a href="#"><i class="icon-twitter"></i></a></li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="card-title">
+                    <h2>Dr. Mary Somers</h2>
+                    <p>Marketing Manager</p>
+                </div>
+            </div>
+            <div class="card">
+                <div class="card-img">
+                    <img src="images/Loba.png" alt="Loba image">
+                    <div class="hover-box">
+                        <ul class="social-networks">
+                            <li><a href="#"><i class="icon-facebook"></i></a></li>
+                            <li><a href="#"><i class="icon-linkedin"></i></a></li>
+                            <li><a href="#"><i class="icon-twitter"></i></a></li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="card-title">
+                    <h2>Loba Andrade</h2>
+                    <p>Financial Analyst</p>
+                </div>
+            </div>
+            <div class="card">
+                <div class="card-img">
+                    <img src="images/Valk.png" alt="Valk image">
+                    <div class="hover-box">
+                        <ul class="social-networks">
+                            <li><a href="#"><i class="icon-facebook"></i></a></li>
+                            <li><a href="#"><i class="icon-linkedin"></i></a></li>
+                            <li><a href="#"><i class="icon-twitter"></i></a></li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="card-title">
+                    <h2>Kairi Imahara</h2>
+                    <p>Product Manager</p>
+                </div>
+            </div>
+            <div class="card">
+                <div class="card-img">
+                    <img src="images/Wattson.png" alt="Wattson image">
+                    <div class="hover-box">
+                        <ul class="social-networks">
+                            <li><a href="#"><i class="icon-facebook"></i></a></li>
+                            <li><a href="#"><i class="icon-linkedin"></i></a></li>
+                            <li><a href="#"><i class="icon-twitter"></i></a></li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="card-title">
+                    <h2>Natalie Paquette</h2>
+                    <p>Cybersecurity Analyst</p>
+                </div>
+            </div>
+            <div class="card">
+                <div class="card-img">
+                    <img src="images/Wraith.png" alt="Wraith image">
+                    <div class="hover-box">
+                        <ul class="social-networks">
+                            <li><a href="#"><i class="icon-facebook"></i></a></li>
+                            <li><a href="#"><i class="icon-linkedin"></i></a></li>
+                            <li><a href="#"><i class="icon-twitter"></i></a></li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="card-title">
+                    <h2>Renee Hope Blasey</h2>
+                    <p>Cloud Architect</p>
                 </div>
             </div>
         </div>
