done but i don't know how to fix not responsive "card-title".

--- a/index.html
+++ b/index.html
@@ -14,32 +14,14 @@
     <div class="full-screen">
         <div><img src="images/FS1.png" alt="img name"></div>
         <div><img src="images/FS2.png" alt="img name"></div>
-        <div><img src="images/FS3.png" alt="img name"></div>
         <div><img src="images/FS5.png" alt="img name"></div>
         <div><img src="images/FS8.png" alt="img name"></div>
-        <div><img src="images/FS9.png" alt="img name"></div>
         <div><img src="images/FS10.png" alt="img name"></div>
         <div><img src="images/FS11.png" alt="img name"></div>
         <div><img src="images/FS13.png" alt="img name"></div>
     </div>
     <div class="container">
         <div class="profile-cards">
-            <div class="card">
-                <div class="card-img">
-                    <img src="images/Ash.png" alt="Ash image">
-                    <div class="hover-box">
-                        <ul class="social-networks">
-                            <li><a href="#"><i class="icon-facebook"></i></a></li>
-                            <li><a href="#"><i class="icon-linkedin"></i></a></li>
-                            <li><a href="#"><i class="icon-twitter"></i></a></li>
-                        </ul>
-                    </div>
-                </div>
-                <div class="card-title">
-                    <h2>Dr. Ashleigh Reid</h2>
-                    <p>DevOps Engineer</p>
-                </div>
-            </div>
             <div class="card">
                 <div class="card-img">
                     <img src="images/Conduit.png" alt="Conduit image">
@@ -53,39 +35,7 @@
                 </div>
                 <div class="card-title">
                     <h2>Rowenna Valentina</h2>
-                    <p>SEO and Founder</p>
-                </div>
-            </div>
-            <div class="card">
-                <div class="card-img">
-                    <img src="images/Hora.png" alt="Hora image">
-                    <div class="hover-box">
-                        <ul class="social-networks">
-                            <li><a href="#"><i class="icon-facebook"></i></a></li>
-                            <li><a href="#"><i class="icon-linkedin"></i></a></li>
-                            <li><a href="#"><i class="icon-twitter"></i></a></li>
-                        </ul>
-                    </div>
-                </div>
-                <div class="card-title">
-                    <h2>Dr. Mary Somers</h2>
-                    <p>Marketing Manager</p>
-                </div>
-            </div>
-            <div class="card">
-                <div class="card-img">
-                    <img src="images/Loba.png" alt="Loba image">
-                    <div class="hover-box">
-                        <ul class="social-networks">
-                            <li><a href="#"><i class="icon-facebook"></i></a></li>
-                            <li><a href="#"><i class="icon-linkedin"></i></a></li>
-                            <li><a href="#"><i class="icon-twitter"></i></a></li>
-                        </ul>
-                    </div>
-                </div>
-                <div class="card-title">
-                    <h2>Loba Andrade</h2>
-                    <p>Financial Analyst</p>
+                    <p>CEO and Founder</p>
                 </div>
             </div>
             <div class="card">
@@ -118,6 +68,54 @@
                 <div class="card-title">
                     <h2>Natalie Paquette</h2>
                     <p>Cybersecurity Analyst</p>
+                </div>
+            </div>
+            <div class="card">
+                <div class="card-img">
+                    <img src="images/Hora.png" alt="Hora image">
+                    <div class="hover-box">
+                        <ul class="social-networks">
+                            <li><a href="#"><i class="icon-facebook"></i></a></li>
+                            <li><a href="#"><i class="icon-linkedin"></i></a></li>
+                            <li><a href="#"><i class="icon-twitter"></i></a></li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="card-title">
+                    <h2>Dr. Mary Somers</h2>
+                    <p>Marketing Manager</p>
+                </div>
+            </div>
+            <div class="card">
+                <div class="card-img">
+                    <img src="images/Ash.png" alt="Ash image">
+                    <div class="hover-box">
+                        <ul class="social-networks">
+                            <li><a href="#"><i class="icon-facebook"></i></a></li>
+                            <li><a href="#"><i class="icon-linkedin"></i></a></li>
+                            <li><a href="#"><i class="icon-twitter"></i></a></li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="card-title">
+                    <h2>Dr. Ashleigh Reid</h2>
+                    <p>DevOps Engineer</p>
+                </div>
+            </div>
+            <div class="card">
+                <div class="card-img">
+                    <img src="images/Loba.png" alt="Loba image">
+                    <div class="hover-box">
+                        <ul class="social-networks">
+                            <li><a href="#"><i class="icon-facebook"></i></a></li>
+                            <li><a href="#"><i class="icon-linkedin"></i></a></li>
+                            <li><a href="#"><i class="icon-twitter"></i></a></li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="card-title">
+                    <h2>Loba Andrade</h2>
+                    <p>Financial Analyst</p>
                 </div>
             </div>
             <div class="card">
